<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/instagram_home_filled_24"
        app:showAsAction="ifRoom"
        android:title="@string/bottom_navigation_home_title" />
    <item
        android:id="@+id/action_add"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_add_box_24"
        app:showAsAction="ifRoom"
        android:title="@string/bottom_navigation_add_title" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        app:showAsAction="ifRoom"
        android:title="@string/bottom_navigation_person_title" />
</menu>