<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ComposeFragment">

        <EditText
            android:id="@+id/description_text_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/main_activity_description_text_field_hint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/post_image_view"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/post_image_view"
            app:layout_constraintTop_toBottomOf="@+id/post_image_view" />

        <Button
            android:id="@+id/capture_image_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/purple_700"
            android:text="@string/main_activity_take_picture_button_text"
            app:layout_constraintEnd_toEndOf="@+id/description_text_field"
            app:layout_constraintStart_toStartOf="@+id/description_text_field"
            app:layout_constraintTop_toBottomOf="@+id/description_text_field" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/purple_700"
            android:text="@string/main_activity_submit_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/capture_image_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/capture_image_button"
            app:layout_constraintTop_toBottomOf="@+id/capture_image_button"
            app:layout_constraintVertical_bias="0" />

        <ImageView
            android:id="@+id/post_image_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <ProgressBar
            android:id="@+id/composeProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:indeterminateTint="@color/login_button_blue"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/submit_button"
            tools:visibility="gone" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
